--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@react-native-community/eslint-config": "^2.0.0",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "eslint": "^7.2.0",
+    "prettier": "^2.0.5"
   },
   "private": true
 }
